# sWar

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
controllers/: CMakeLists.txt  duelist.cpp  duelist.h  highbot.cpp  highbot.h  highclass.cpp  highclass.h  lowbot.cpp  lowbot.h  randombot.cpp  randombot.h  scorerecorder.cpp  scorerecorder.h  viewer.h
docs/: sWarStateGraph.gml  sWarStateGraph.gv
driver/: CMakeLists.txt  driver.cpp
include/: CMakeLists.txt  card.h  controllermanager.h  deck.h  event.h  gamestate.h  playercontroller.h  settings.h  statefunctions.h
libs/: CMakeLists.txt
licenses/: README.md
src/: CMakeLists.txt  card.cpp  controllermanager.cpp  event.cpp  gamestate.cpp  statecontroller.cpp
src/statefunctions/: battle.cpp  collect.cpp  declaration.cpp  draw.cpp  duel.cpp  error.cpp  gameend.cpp  gamestart.cpp  regroup.cpp  surrender.cpp
tests/: CMakeLists.txt
